--- a/src/List/index.css
+++ b/src/List/index.css
@@ -8,9 +8,13 @@
     border: 1px solid #eee;
     float: left;
     box-sizing: border-box;
+    text-align: center;
+    padding-top: 15px;
+    cursor: pointer;
+    color: black;
+    text-decoration: none;
+
 }
-.list_box .item::before,.list_box .item::after{
-    content: "";
-    display: block;
-    clear: both;
+.list_box .item img{
+    width: 35%;
 }
