--- a/07_src_路由的简单使用/App.css
+++ b/07_src_路由的简单使用/App.css
@@ -20,6 +20,9 @@
 {
     border-bottom: 1px solid #eee;
 }
+.active{
+    background-color: skyblue;
+}
 .content{
     width: 800px;
     margin: 20px 0 0 30px;
